--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,19 @@ install:
   - whoami
   - echo "Start of Pipleine"
   - HOMEBREW_NO_AUTO_UPDATE=1
+ 
+git:
+  depth: false
+  
+cache:
+   -directories:
+     -$HOME/Library/Caches/Homebrew
    
 script:
   - ls
   - chmod +x hello.sh
   - ./hello.sh
+  - docker pull scratch
   
 after_script:
   - echo "End of Pipline"
